--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style-type: none;
+}
+
 .body-site {
   width: 100%;
   height: 500vh;
@@ -48,7 +52,7 @@
   width: 100%;
 }
 
-.pages-site > div > .row > .col-md-2 {
+.pages-site > div > .row > .col-2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -82,10 +86,124 @@
   top: 0;
 }
 
-.home-page > div > .row > .col-md-2 > div::after {
+.home-page > div > .row > .col-2 > div {
+  margin-top: -80px;
+}
+
+.home-page > div > .row > .col-2 > div::before {
+  bottom: 40px;
+}
+
+.home-page > div > .row > .col-2 > div::after {
   position: unset;
 }
 
-.contact-page > div > .row > .col-md-2 > div::before {
+.contact-page > div > .row > .col-2 > div::before {
   position: unset;
+}
+
+@media screen and (max-width: 600px) {
+  .progress-side {
+    width: 40px;
+    height: 40px;
+    border: 5px solid white;
+  }
+
+  .progress-side::before {
+    content: "";
+    width: 5px;
+    height: calc(50% - 18px);
+    background-color: white;
+    position: absolute;
+    bottom: 0;
+  }
+
+  .progress-side::after {
+    content: "";
+    width: 5px;
+    height: calc(50% - 18px);
+    background-color: white;
+    position: absolute;
+    top: 0;
+  }
+}
+
+/* .ul-menu {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  height: 80px;
+  padding-left: 60px;
+}
+
+.ul-menu > .item-ul {
+  margin-left: 50px;
+  font-size: 20px;
+  color: #fff;
+}
+
+@media screen and (max-width: 1200px) {
+  .ul-menu > .item-ul {
+    margin-left: 35px;
+    font-size: 20px;
+    color: #fff;
+  }
+  .ul-menu {
+    padding-left: 20px;
+  }
+}
+
+.menu-ham {
+  display: none;
+}
+
+@media screen and (max-width: 750px) {
+  .menu-ham {
+    display: flex;
+  }
+
+  .menu-des {
+    display: none;
+  }
+} */
+
+.home-page > div > .container-fluid {
+  padding: 0 70px;
+}
+
+.nav-link.text-light {
+  position: relative;
+  margin-left: 30px;
+  top: 3px;
+  font-size: 20px;
+}
+
+.navbar-toggler {
+  border: 2px solid #838383;
+}
+
+@media screen and (max-width: 1150px) {
+  .home-page > div > .container-fluid {
+    padding: 0 30px;
+  }
+
+  .nav-link.text-light {
+    position: relative;
+    margin-left: 20px;
+    top: 3px;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .home-page > div > .container-fluid {
+    padding: 0;
+  }
+
+  .nav-link.text-light {
+    position: relative;
+    margin-left: 20px;
+    top: 3px;
+    font-size: 20px;
+  }
 }
