--- a/styles/main.css
+++ b/styles/main.css
@@ -90,14 +90,6 @@ a {
   top: 0;
 }
 
-.home-page > div > .row > .col-2 > div {
-  margin-top: -80px;
-}
-
-.home-page > div > .row > .col-2 > div::before {
-  bottom: 40px;
-}
-
 .home-page > div > .row > .col-2 > div::after {
   position: unset;
 }
@@ -132,71 +124,10 @@ a {
   }
 }
 
-.menu-nav {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  height: 80px;
+.nav-link {
+  font-size: 18px;
 }
 
-.menu-items a {
-  font-size: 20px;
-  color: #fff;
-  margin: 0 10px;
-  padding: 5px 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.mobile-menu {
-  display: none;
-  padding: 20px 15px;
-}
-
-.ham-menu {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  cursor: pointer;
-  transition: 300ms;
-}
-
-.ham-menu:hover span {
-  box-shadow: #ffe15d 0px 0px 30px 0px;
-}
-
-.ham-menu span {
-  width: 100%;
-  height: 4px;
-  background-color: #fff;
-  border-radius: 100px;
-  position: absolute;
-  transition: 300ms;
-}
-
-.ham-menu span:nth-child(1) {
-  transform: translateY(-12px);
-}
-
-.ham-menu span:nth-child(3) {
-  transform: translateY(12px);
-}
-
-@media screen and (max-width: 990px) {
-  .mobile-menu {
-    display: flex;
-  }
-
-  .des-menu {
-    display: none;
-  }
-
-  .menu-nav {
-    justify-content: end;
-  }
+.navbar-brand {
+  font-size: 25px;
 }
